# curious

./: .gitignore  README.md  linkedin-post.md  pyproject.toml  screenshot-content.md
.github/workflows/: create.yml  evolve-remote.yml  evolve.yml
creations/: history.jsonl
creations/day_001/: README.md  fluctuverse.py  meta.json  scores.json
creations/day_002/: README.md  meta.json  quintessension.py  scores.json
creations/day_003/: README.md  meta.json  rheomatrix.py  scores.json
creations/day_004/: README.md  meta.json  scores.json  symbiocode.scl
curious/: __init__.py  cli.py  engine.py
curious/harness/: create.py  evolve.py  fitness.py
curious/observers/: file_observer.py  git_observer.py
curious/providers/: base.py
curious/seed/: creator.py  curiosity.py  experimenter.py  learner.py  metacognition.py  world_model.py
curious_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
