[project]
name = "curious-ai"
version = "0.1.0"
description = "An AI that rewrites its own brain. Self-evolving cognitive architecture."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "watchdog>=4.0.0",
]

[project.scripts]
curious = "curious.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
